# LLMetrics

./: .env.example  .gitignore  README.md  pyproject.toml
chroma/a2206a9c-8ab0-4e44-8cb6-4f8ca099622f/: index_metadata.pickle
llmetrics/api/: __init__.py  app.py  dependencies.py  middleware.py
llmetrics/api/routes/: metrics.py  query.py
llmetrics/core/: config.py  exceptions.py  models.py
llmetrics/dashboard/: __init__.py  cli.py
llmetrics/evaluation/: __init__.py  base.py  context_relevance.py  faithfulness.py  llm_judge.py
llmetrics/metrics/: __init__.py  cost.py  latency.py  tokens.py
llmetrics/pipeline/: __init__.py  llm_client.py  load.py  prompt_builder.py  reranker.py  retriever.py
llmetrics/storage/: __init__.py  base.py  jsonl_store.py  sqlite_store.py
llmetrics/tracing/: __init__.py  context.py  span.py  tracer.py
scripts/: replay_traces.py
tests/integration/: test_api.py  test_pipeline.py  test_regression.py  test_storage.py
tests/unit/: test_evaluators.py  test_models.py  test_tracing_metrics.py
