[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmetrics"
version = "0.1.0"
description = "Observability and evaluation system for LLM-based applications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "groq>=0.9.0",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
llmetrics = "llmetrics.dashboard.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true